--- a/frontend/src/uploadVedio.css
+++ b/frontend/src/uploadVedio.css
@@ -88,3 +88,12 @@
     margin-top: 10px;
   }
   
+  .error {
+    border: 1px solid red;
+  }
+  
+  .error-message {
+    color: red;
+    font-size: 0.9em;
+    margin-top: 5px;
+  }
